--- a/app/views/links/index.html.haml
+++ b/app/views/links/index.html.haml
@@ -1,23 +1,1 @@
-%h1 Listing links
-
-%table
-  %thead
-    %tr
-      %th Origin
-      %th Url
-      %th
-      %th
-      %th
-
-  %tbody
-    - @links.each do |link|
-      %tr
-        %td= link.origin
-        %td= link.url
-        %td= link_to 'Show', link
-        %td= link_to 'Edit', edit_link_path(link)
-        %td= link_to 'Destroy', link, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
-
-= link_to 'New Link', new_link_path
+= render 'form'
