A bit of refactoring

--- a/app/views/links/_form.html.haml
+++ b/app/views/links/_form.html.haml
@@ -11,7 +11,7 @@
         .card-content
           .row
             .input-field.col.s9
-              = f.text_field :origin, {placeholder: "Paste your URL, shrink it, and share.", required: 'required', type: 'url', class: 'validate'}
+              = f.text_field :origin, {placeholder: "Paste your URL, shrink it, and share.", required: 'required', class: 'validate'}
             .input-field.col.s3
               %button.btn.waves-effect.waves-light{type: "submit", name: "commit"}
                 Submit
