--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,23 +1,25 @@
 !!!
 %html{lang: 'en'}
   %head
-    %meta{content: 'text/html; charset=UTF-8', :'http-equiv' => 'Content-Type'}/
+    %meta{content: 'text/html; charset=UTF-8', 'http-equiv': 'Content-Type'}/
     %meta{content: 'width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no', name: 'viewport'}/
     %title Pizz.ly - url shortener
-    =stylesheet_link_tag 'application', media: 'all', data: {:'turbolinks-track' => true}
+    =stylesheet_link_tag 'application', media: 'all', data: {'turbolinks-track': true}
     =csrf_meta_tags
   %body
     %nav
       .nav-wrapper
+        %a.brand-logo.center{href: '/'}
+          Pizzly
     .container
       =yield
     %footer.page-footer
       .container
         .row
-          .col.l6.s12
+          .col.l6.s6
             %h5.white-text
               Footer Content
       .footer-copyright
         .container
           © 2015 Copyright Text
-    =javascript_include_tag 'application', data: {:'turbolinks-track' => true}
+    =javascript_include_tag 'application', data: {'turbolinks-track': true}
