--- a/app/views/links/_form.html.haml
+++ b/app/views/links/_form.html.haml
@@ -14,4 +14,4 @@
               = f.text_field :origin, {placeholder: "Paste your URL, shrink it, and share.", required: 'required', class: 'validate'}
             .input-field.col.s4
               %button.btn.waves-effect.waves-light{type: "submit", name: "commit"}
-                Submit
+                Shorten
